--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,1 +1,39 @@
-Flask
+aniso8601==8.0.0
+attrs==19.3.0
+beautifulsoup4==4.8.1
+bs4==0.0.1
+certifi==2019.9.11
+chardet==3.0.4
+Click==7.0
+crdf-serializer==0.0.1
+Flask==1.1.1
+Flask-BasicAuth==0.2.0
+Flask-Cors==3.0.8
+Flask-JWT==0.3.2
+Flask-RESTful==0.3.7
+flask-restplus==0.13.0
+Flask-SQLAlchemy==2.4.1
+gunicorn==20.0.0
+idna==2.8
+importlib-metadata==0.23
+isodate==0.6.0
+itsdangerous==1.1.0
+Jinja2==2.10.3
+jsonschema==3.1.1
+lxml==4.4.1
+MarkupSafe==1.1.1
+more-itertools==7.2.0
+PyJWT==1.4.2
+pymarc==3.1.13
+pyparsing==2.4.5
+pyrsistent==0.15.5
+pytz==2019.3
+rdflib==4.2.2
+requests==2.22.0
+six==1.13.0
+soupsieve==1.9.5
+SQLAlchemy==1.3.11
+Unidecode==1.1.1
+urllib3==1.25.7
+Werkzeug==0.16.0
+zipp==0.6.0
