--- a/api/Pipfile
+++ b/api/Pipfile
@@ -19,7 +19,7 @@ unidecode  = "*"
 pymarc  = "*"
 rdflib  = "*"
 gunicorn = "*"
-crdf_serializer = "*"
+simpot = "*"
 
 [requires]
 python_version = "3.7"
@@ -27,3 +27,4 @@ python_version = "3.7"
 [dev-packages]
 pylint = "*"
 flake8 = "*"
+autopep8 = "*"
