--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,11 +1,14 @@
 aniso8601==8.0.0
+astroid==2.3.3
 attrs==19.3.0
+autopep8==1.4.4
 beautifulsoup4==4.8.1
 bs4==0.0.1
 certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
-crdf-serializer==0.0.1
+entrypoints==0.3
+flake8==3.7.9
 Flask==1.1.1
 Flask-BasicAuth==0.2.0
 Flask-Cors==3.0.8
@@ -13,27 +16,36 @@ Flask-JWT==0.3.2
 Flask-RESTful==0.3.7
 flask-restplus==0.13.0
 Flask-SQLAlchemy==2.4.1
-gunicorn==20.0.0
+gunicorn==20.0.2
 idna==2.8
 importlib-metadata==0.23
 isodate==0.6.0
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.3
-jsonschema==3.1.1
+jsonschema==3.2.0
+lazy-object-proxy==1.4.3
 lxml==4.4.1
 MarkupSafe==1.1.1
+mccabe==0.6.1
 more-itertools==7.2.0
+pycodestyle==2.5.0
+pyflakes==2.1.1
 PyJWT==1.4.2
+pylint==2.4.4
 pymarc==3.1.13
 pyparsing==2.4.5
-pyrsistent==0.15.5
+pyrsistent==0.15.6
 pytz==2019.3
 rdflib==4.2.2
 requests==2.22.0
+simpot==0.0.1
 six==1.13.0
 soupsieve==1.9.5
 SQLAlchemy==1.3.11
+typed-ast==1.4.0
 Unidecode==1.1.1
 urllib3==1.25.7
 Werkzeug==0.16.0
+wrapt==1.11.2
 zipp==0.6.0
