--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -44,6 +44,7 @@ six==1.13.0
 soupsieve==1.9.5
 SQLAlchemy==1.3.11
 typed-ast==1.4.0
+ufma-scrapper==0.0.11
 Unidecode==1.1.1
 urllib3==1.25.7
 Werkzeug==0.16.0
